# ChadOS

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  flake.nix  ressources.md
.cargo/: config.toml
build-cfg/: make.env
doc/: JOURNAL.txt
src/: api.rs  cfg.rs  console.rs  keys.rs  main.rs  sched.rs  testing.rs  time.rs  util.rs
src/interrupt/: gdt.rs  handler.rs  idt.rs  mod.rs  pic.rs
src/io/: mod.rs  serial.rs  vga.rs
src/mem/: heap.rs  mem.rs  mod.rs  paging.rs
src/mem/alloc/: init.rs  mod.rs
src/mem/alloc/backend/: galloc.rs  mod.rs
src/mem/alloc/backend/bump/: block.rs  bump.rs  linked_list.rs  mod.rs
src/usr_bin/: mod.rs
