[package]
name = "ChadOS"
version = "0.1.0"
edition = "2021"
authors = ["NewDawn0 (Tom)"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.6"
x86_64 = "0.14.11"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
linked_list_allocator = { version = "0.9.0", optional = true }
good_memory_allocator = { version = "0.1.7", optional = true }
dlmalloc = { version = "0.2.4", optional = true }
slab_allocator_rs = { version = "1.0.2", optional = true }
const_format = "0.2.32"

[package.metadata.bootimage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]

[features]
default = ["alloc-bump"]
alloc-bump = ["linked_list_allocator"]
alloc-slab = ["slab_allocator_rs"]
alloc-galloc = ["good_memory_allocator"]
alloc-dlmalloc = ["dlmalloc"]
