[package]
name = "ChadOS"
version = "0.1.0"
edition = "2021"
authors = ["NewDawn0 (Tom)"]

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
const_format = "0.2.32"
crossbeam-queue = { version = "0.3.8", default-features = false, features = [
  "alloc",
] }
dlmalloc = { version = "0.2.4", optional = true }
futures-util = { version = "0.3.28", default-features = false, features = [
  "alloc",
] }
good_memory_allocator = { version = "0.1.7", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = { version = "0.10.5", optional = true }
pc-keyboard = "0.5.1"
pic8259 = "0.10.4"
slab_allocator_rs = { version = "1.0.2", optional = true }
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.6"
x86_64 = "0.14.11"

[package.metadata.bootimage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]

[features]
default = ["alloc-galloc"]
alloc-bump = ["linked_list_allocator"]
alloc-dlmalloc = ["dlmalloc"]
alloc-galloc = ["good_memory_allocator"]
alloc-slab = ["slab_allocator_rs"]
